[build-system]
requires = ["setuptools >= 70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "psf_analyser"
version = "0.1.0"
dynamic = ["dependencies"]

requires-python = ">=3.10"
authors = [
  {name = "Miguel A. Boland", email = "migueldboland@gmail.com"},
]
maintainers = [
]
description = ""
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
Homepage = "https://github.com/mb1069/psf_analyser"

[project.scripts]
psf-prep-data = "psf_analyser.prepare_data.main:run_tool"

[project.gui-scripts]
psf-gui = "psf_analyser.app:main"
